--- a/backend/resources/locales/pt/validations.json
+++ b/backend/resources/locales/pt/validations.json
@@ -3,5 +3,6 @@
   "min": "O campo {field} deve ter pelo menos {length} caracteres",
   "max": "O campo {field} deve ter no máximo {length} caracteres",
   "email": "O campo {field} deve ser um endereço de e-mail válido",
-  "in": "Valor inválid para o campo {field}"
+  "in": "Valor inválid para o campo {field}",
+  "confirmed": "O campo {field} não é igual a sua confirmação"
 }
